feat(colab): test condacolab

--- a/notebooks/HelloWorld.ipynb
+++ b/notebooks/HelloWorld.ipynb
@@ -11,6 +11,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3bed6f8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/Kampaay/pyexplore.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e18d5ae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -q condacolab\n",
+    "import condacolab\n",
+    "condacolab.install()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34436c31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import condacolab\n",
+    "condacolab.check()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "130a419d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda env update --file environment.yml --prune -p ./env"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "fa3053cb-1985-411c-9216-8495429732b0",
    "metadata": {},
